syntax = "proto3";
option go_package = "/proto";

message HelloRequest {
  string  firstName = 1;
  string  lastName = 2;
}
message HelloResponse {
  string message = 1;
}

service HelloService {
  rpc sayHello (HelloRequest) returns (HelloResponse){};
}